--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,8 +1,9 @@
-.toolbar {
-  z-index: 9999 !important;
-}
-
 .icon {
   width: 35px;
   height: 35px;
+}
+
+.toolbar {
+  background-color: #000 !important;
+  height: 80px !important;
 }
