--- a/src/app/list/list.component.scss
+++ b/src/app/list/list.component.scss
@@ -1,21 +1,40 @@
-.spinner-wrapper {
-  background-color: rgba(0, 0, 0, 0.25);
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100vh;
-  z-index: 999 !important;
-  
-  .spinner {
-    width: 40px;
-    height: 40px;
+::ng-deep {
+  .spinner-wrapper {
+    background-color: rgba(0, 0, 0, 0.25);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    z-index: 999 !important;
+    
+    .spinner {
+      width: 40px;
+      height: 40px;
+    }
   }
-}
+  
+  .filter-menu {
+    border-radius: 0 !important;
+    background-color: #000 !important;
 
-.img-custom {
-  background-color: #424242 !important;
-  height: 140px !important;
-  object-fit: cover;
-  overflow: hidden;
+    .mat-menu-content {
+      padding: 0 !important;
+    }
+
+    .custom-menu-item {
+      height: 38px !important;
+      line-height: 38px !important;
+    }
+
+    .selected-filter {
+      background-color: #fff;
+      color: #000;
+
+      &:hover, &:focus {
+        background-color: #fff;
+        color: #000;
+      }
+    }
+  }  
 }
