--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar class="toolbar p-0 shadow-none rounded-0">
   <div class="container text-center">
     <img src="/assets/icons/icon-192x192.png" alt="icon-192x192.png" class="img-fluid icon me-2">
-    <span [ngStyle]="{ letterSpacing: '2px' }">YouTube DOWNLOADER</span>
+    <span [ngStyle]="{ letterSpacing: '2px' }" class="fw-bold">YouTube DOWNLOADER</span>
   </div>
 </mat-toolbar>
 <div class="container-fluid p-0">
