--- a/src/app/list/list-view/list-view.component.scss
+++ b/src/app/list/list-view/list-view.component.scss
@@ -3,10 +3,24 @@
     p, span {
       text-shadow: 1px 2px rgba(0, 0, 0, 0.4);
     }
-  
+
     .content {
       padding-top: 2rem !important;
       height: 200px !important;
+    }
+
+    .loading {
+      width: 30px !important;
+      height: 30px !important;
+
+      svg {
+        width: 30px !important;
+        height: 30px !important;
+
+        circle {
+          stroke: #fff !important;
+        }
+      }
     }
 
     .img-list-custom {
@@ -30,19 +44,19 @@
       opacity: 0;
       transition: all ease-in-out 0.5s;
     }
-    
+
     .icon-dott {
       font-size: 10px !important;
       height: 9px !important;
       width: 10px !important;
     }
-  
+
     .text-list {
       max-height: 60px;
       overflow: hidden;
       text-overflow: ellipsis;
     }
-  
+
     .bg-list-custom {
       position: absolute;
       top: 0;
@@ -62,5 +76,5 @@
         opacity: 1;
       }
     }
-  }  
+  }
 }
