--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,7 +9,6 @@
 // Be sure that you only ever include this mixin once!
 @include mat.core();
 
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500;700&display=swap');
 @import "bootstrap/scss/bootstrap";
 
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
@@ -39,10 +38,10 @@ $youtube-downloader-material-theme: mat.define-dark-theme((
 
 /* You can add global styles to this file, and also import other style files */
 
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; background: #000; }
+body { margin: 0; font-family: 'Kdam Thmor Pro', sans-serif; background: #000; }
 
 h1, h2, h3, h4, h5, h6, span, input, label, div, p, pre, strong, b, textarea, select {
-  font-family: Roboto, "Helvetica Neue", sans-serif;
+  font-family: 'Kdam Thmor Pro', sans-serif;
 }
 
 .mat-tooltip {
